test/classes/initializers/phase1/accessThisBad.good
accessThisBad.chpl:5: error: attempted utilization of "this" too early in initializer
